--- a/frontend/control.html
+++ b/frontend/control.html
@@ -667,7 +667,7 @@
 
           let infoText = "";
           if (room) infoText += `Room: ${room}`;
-          if (room && batch) infoText += " | ";
+          if (room && batch) infoText += "<br>";
           if (batch) infoText += `Batch: ${batch}`;
 
           infoDiv.textContent = infoText;
