--- a/frontend/index.html
+++ b/frontend/index.html
@@ -777,7 +777,7 @@
         if (ad.type === "image") {
           // Images: fixed 20-second duration
           const duration = IMAGE_AD_DURATION;
-          console.log(`📷 Image ${current + 1}/${ads.length}: ${ad.src} (${duration}s)`);
+          console.log(`📷 Image ${current + 1}/${ads.length}: ${ad.src} (${duration/1000}s)`);
           
           updateAdProgress(duration, 0);
           adImage.src = "https://faculty-status-backend.onrender.com" + ad.src;
