--- a/frontend/control.html
+++ b/frontend/control.html
@@ -813,7 +813,7 @@
 
     // ADD THESE MISSING CONSTANTS:
     // All available rooms
-    const ALL_ROOMS = ['003', '102', '203', '204', '205', '206', '303', '304', '305', '306', '307'];
+    const ALL_ROOMS = ['B2-003', 'B2-102', 'B2-203', 'B2-204', 'B2-205', 'B2-206', 'B2-303', 'B2-304', 'B2-305', 'B2-306', 'B2-307'];
 
     // Time slots for the day (8 AM to 6 PM)
     const TIME_SLOTS = [
