--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -836,8 +836,8 @@
 
         // Function to redirect to login with proper parameters
         function redirectToLogin() {
-            localStorage.setItem('lastVisitedPage', 'admin');
-            window.location.href = 'login.html?redirect=admin';
+          // Don't set lastVisitedPage here - let login page handle redirect logic
+          window.location.href = 'login.html?redirect=admin';
         }
 
         // Check authentication
@@ -1799,16 +1799,18 @@
         }
 
         function logout() {
-            fetch(`${API_BASE}/api/logout`, {
-                method: 'POST',
-                credentials: 'include'
-            }).then(() => {
-                localStorage.removeItem('lastVisitedPage');
-                window.location.href = 'login.html';
-            }).catch(() => {
-                localStorage.removeItem('lastVisitedPage');
-                window.location.href = 'login.html';
-            });
+          fetch(`${API_BASE}/api/logout`, {
+            method: 'POST',
+            credentials: 'include'
+          }).then(() => {
+            // Clear any stored preferences to ensure clean logout
+            localStorage.removeItem('lastVisitedPage');
+            window.location.href = 'login.html';
+          }).catch(() => {
+            // Clear preferences even if logout request fails
+            localStorage.removeItem('lastVisitedPage');
+            window.location.href = 'login.html';
+          });
         }
 
         // Add CSS for marquee animation
