--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -1039,11 +1039,11 @@
                 </div>
                 <div class="form-group mobile-hide">
                     <label>Room</label>
-                    <input type="text" class="form-control" id="class-${day}-${classIndex}-room" placeholder="101">
+                    <input type="text" class="form-control" id="class-${day}-${classIndex}-room" placeholder="B2-103">
                 </div>
                 <div class="form-group mobile-hide">
                     <label>Batch</label>
-                    <input type="text" class="form-control" id="class-${day}-${classIndex}-batch" placeholder="CSE-21">
+                    <input type="text" class="form-control" id="class-${day}-${classIndex}-batch" placeholder="1st-CSE-A">
                 </div>
                 <button type="button" class="btn btn-danger" onclick="removeClass(this)">Remove</button>
             `;
